# uniffi-rs

./: Cargo.toml
.cargo/: config.toml
fixtures/swift-bridging-header-compile/: Cargo.toml
uniffi/src/: cli.rs  lib.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs  library_mode.rs
uniffi_bindgen/src/bindings/: mod.rs
uniffi_bindgen/src/bindings/kotlin/: mod.rs  test.rs
uniffi_bindgen/src/bindings/python/: mod.rs  test.rs
uniffi_bindgen/src/bindings/ruby/: mod.rs  test.rs
uniffi_bindgen/src/bindings/swift/: mod.rs  test.rs
uniffi_udl/: Cargo.toml
