[workspace]
members = [
  "uniffi",
  "uniffi_bindgen",
  "uniffi_build",
  "uniffi_core",
  "uniffi_macros",
  "uniffi_meta",
  "uniffi_testing",
  "uniffi_udl",
  "weedle2",

  "examples/app/uniffi-bindgen-cli",
  "examples/arithmetic",
  "examples/callbacks",
  "examples/custom-types",
  "examples/futures",
  "examples/geometry",
  "examples/rondpoint",
  "examples/sprites",
  "examples/todolist",
  "examples/traits",

  "fixtures/benchmarks",
  "fixtures/callbacks",
  "fixtures/coverall",

  "fixtures/ext-types/guid",
  "fixtures/ext-types/http-headermap",
  "fixtures/ext-types/lib",
  "fixtures/ext-types/proc-macro-lib",
  "fixtures/ext-types/uniffi-one",

  "fixtures/foreign-executor",
  "fixtures/futures",
  "fixtures/keywords/kotlin",
  "fixtures/keywords/rust",
  "fixtures/keywords/swift",
  "fixtures/large-enum",
  "fixtures/metadata",
  "fixtures/proc-macro",
  "fixtures/reexport-scaffolding-macro",
  "fixtures/regressions/cdylib-crate-type-dependency/cdylib-dependency",
  "fixtures/regressions/cdylib-crate-type-dependency/ffi-crate",
  "fixtures/regressions/enum-without-i32-helpers",
  "fixtures/regressions/fully-qualified-types",
  "fixtures/regressions/kotlin-experimental-unsigned-types",
  "fixtures/regressions/logging-callback-interface",
  "fixtures/regressions/missing-newline",
  "fixtures/regressions/nested-module-import",
  "fixtures/regressions/swift-callbacks-omit-labels",
  "fixtures/regressions/swift-dictionary-nesting",
  "fixtures/regressions/unary-result-alias",
  "fixtures/simple-fns",
  "fixtures/simple-iface",
  "fixtures/swift-bridging-header-compile",
  "fixtures/swift-omit-labels",
  "fixtures/trait-methods",
  "fixtures/type-limits",
  "fixtures/uitests",
  "fixtures/uniffi-fixture-time",
  "fixtures/version-mismatch",
]

resolver = "2"
