[package]
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
description = "a multi-language bindings generator for rust (codegen and cli tooling)"
documentation = "https://mozilla.github.io/uniffi-rs"
edition = "2021"
homepage = "https://mozilla.github.io/uniffi-rs"
keywords = ["bindgen", "ffi"]
license = "MPL-2.0"
name = "uniffi_bindgen"
repository = "https://github.com/mozilla/uniffi-rs"
version = "0.24.3"

[dependencies]
anyhow = "1"
askama = { version = "0.12", default-features = false, features = ["config"] }
camino = "1.0.8"
cargo_metadata = "0.15"
fs-err = "2.7.0"
glob = "0.3"
goblin = "0.6"
heck = "0.4"
once_cell = "1.12"
paste = "1.0"
serde = "1"
toml = "0.5"
uniffi_meta = { path = "../uniffi_meta", version = "=0.24.3" }
# uniffi_testing = { path = "../uniffi_testing", version = "=0.24.3" }
clap = { version = "4", default-features = false, features = ["derive", "std"], optional = true }
uniffi_udl = { path = "../uniffi_udl", version = "=0.24.3" }
