[package]
description = "udl parsing for the uniffi project"
documentation = "https://mozilla.github.io/uniffi-rs"
edition = "2021"
homepage = "https://mozilla.github.io/uniffi-rs"
keywords = ["bindgen", "ffi"]
license = "MPL-2.0"
name = "uniffi_udl"
repository = "https://github.com/mozilla/uniffi-rs"
version = "0.24.3"

[dependencies]
anyhow = "1"
uniffi_meta = { path = "../uniffi_meta", version = "=0.24.3" }
weedle2 = { version = "4.0.0", path = "../weedle2" }
# uniffi_testing = { path = "../uniffi_testing", version = "=0.24.3" }
