[package]
edition = "2021"
license = "MPL-2.0"
name = "swift-bridging-header-compile"
publish = false
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "uniffi_swift_bridging_header_compiler"

[dependencies]
camino = "1.0.8"
uniffi = { path = "../../uniffi", version = "0.24" }

[build-dependencies]
uniffi = { path = "../../uniffi", version = "0.24", features = ["build"] }

[dev-dependencies]
anyhow = "1"
uniffi = { path = "../../uniffi", version = "0.24", features = ["bindgen-tests", "cli"] }
uniffi_testing = { path = "../../uniffi_testing" }
